src/test/deca/test_compilateur/context/invalid/created/this/this_ambigue.deca
// Description :
//		un setter classique,mais ambigue
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 : (3.43) 'this' ne peut être utilisé dans le main

{
a();
}